# TypingRace

./: CMakeLists.txt
client/: animation.cpp  camera.cpp  client.cpp  game_manager.cpp  path.cpp  player.cpp  resources_manager.cpp  text_bar.cpp  timer.cpp
include/animation/: animation.h
include/camera/: camera.h
include/manager/: game_manager.h  manager.h  resources_manager.h
include/path/: path.h
include/player/: player.h
include/timer/: timer.h
include/ui/: text_bar.h
include/vector/: vector2.h
server/: server.cpp
